# src/main/openapi/document-management-svc.yaml
@@ -11,74 +11,19 @@ tags:
   - name: FileControllerV1
   - name: SupportedMimeTypeControllerV1
 paths:
-  /v1/document:
-    get:
+  /v1/document/search:
+    post:
       security:
-        - oauth2: [ ocx-doc:all, ocx-doc:write, ocx-doc:read]
+        - oauth2: [ ocx-doc:all, ocx-doc:write, ocx-doc:read ]
       tags:
         - DocumentControllerV1
       description: Gets documents by criteria
       operationId: getDocumentByCriteria
-      parameters:
-        - name: channelName
-          in: query
-          schema:
-            type: string
-        - name: createdBy
-          in: query
-          schema:
-            type: string
-        - name: endDate
-          in: query
-          schema:
-            type: string
-        - name: id
-          in: query
-          schema:
-            type: string
-        - name: name
-          in: query
-          schema:
-            type: string
-        - name: objectReferenceId
-          in: query
-          schema:
-            type: string
-        - name: objectReferenceType
-          in: query
-          schema:
-            type: string
-        - name: page
-          in: query
-          schema:
-            format: int32
-            default: "0"
-            minimum: 0
-            type: integer
-        - name: size
-          in: query
-          schema:
-            format: int32
-            default: "200"
-            maximum: 200
-            minimum: 1
-            type: integer
-        - name: startDate
-          in: query
-          schema:
-            type: string
-        - name: state
-          in: query
-          schema:
-            type: array
-            items:
-              $ref: '#/components/schemas/LifeCycleState'
-        - name: typeId
-          in: query
-          schema:
-            type: array
-            items:
-              type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/DocumentSearchCriteria'
       responses:
         "200":
           description: The corresponding documents resource
@@ -102,6 +47,7 @@ paths:
                 $ref: '#/components/schemas/RFCProblem'
         "401":
           description: Not Authorized
+  /v1/document:
     post:
       security:
         - oauth2: [ ocx-doc:all, ocx-doc:write]
@@ -683,74 +629,19 @@ paths:
                 $ref: '#/components/schemas/RFCProblem'
         "401":
           description: Not Authorized
-  /v1/document/show-all-documents:
-    get:
+  /v1/document/search/show-all-documents:
+    post:
       security:
         - oauth2: [ ocx-doc:all, ocx-doc:write, ocx-doc:read]
       tags:
         - DocumentControllerV1
       description: Gets all documents by criteria
       operationId: showAllDocumentsByCriteria
-      parameters:
-        - name: channelName
-          in: query
-          schema:
-            type: string
-        - name: createdBy
-          in: query
-          schema:
-            type: string
-        - name: endDate
-          in: query
-          schema:
-            type: string
-        - name: id
-          in: query
-          schema:
-            type: string
-        - name: name
-          in: query
-          schema:
-            type: string
-        - name: objectReferenceId
-          in: query
-          schema:
-            type: string
-        - name: objectReferenceType
-          in: query
-          schema:
-            type: string
-        - name: page
-          in: query
-          schema:
-            format: int32
-            default: "0"
-            minimum: 0
-            type: integer
-        - name: size
-          in: query
-          schema:
-            format: int32
-            default: "200"
-            maximum: 200
-            minimum: 1
-            type: integer
-        - name: startDate
-          in: query
-          schema:
-            type: string
-        - name: state
-          in: query
-          schema:
-            type: array
-            items:
-              $ref: '#/components/schemas/LifeCycleState'
-        - name: typeId
-          in: query
-          schema:
-            type: array
-            items:
-              type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/DocumentSearchCriteria"
       responses:
         "200":
           description: The corresponding documents resource
